Move npm package to @cntxt org

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@banderson/prettier-config",
+  "name": "@cntxt/prettier-config",
   "version": "1.0.0",
   "description": "Base Prettier config",
   "main": "index.json",
